--- a/src/app/components/candidate-detail.component.html
+++ b/src/app/components/candidate-detail.component.html
@@ -5,5 +5,6 @@
         <label>name: </label>
         <input [(ngModel)]="candidate.name" placeholder="name">
     </div>
+    <button (click)="save()">Save</button>
     <button (click)="goBack()">Back</button>
 </div>
